@@ -1,6 +1,7 @@
 0.07
  - Improve EXAMPLE5 section in doc.
  - Remove diacritics from author name.
+ - Update Module::Install to 1.16 version.
 
 0.06 2014-08-20T09:01:08+02:00
  - Add 'readme_from' directive to Makefile.PL.
